# context-forge

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  QUICKSTART.md  README.md  ROADMAP.md  SPEC_GUIDELINES.md  mkdocs.yml  pyproject.toml
context_forge/: __init__.py  evaluation.py  exceptions.py
context_forge/core/: __init__.py  trace.py  types.py
context_forge/graders/: __init__.py  base.py  hybrid.py
context_forge/graders/deterministic/: __init__.py  memory_corruption.py
context_forge/graders/judges/: __init__.py  base.py  memory_hygiene_judge.py  models.py
context_forge/graders/judges/backends/: __init__.py  ollama.py
context_forge/harness/: __init__.py
context_forge/harness/user_simulator/: __init__.py  models.py  persona.py  runner.py  scenario.py  simulator.py
context_forge/harness/user_simulator/adapters/: __init__.py  base.py  crewai.py  langgraph.py  pydanticai.py
context_forge/harness/user_simulator/llm/: __init__.py  ollama.py
context_forge/instrumentation/: __init__.py  base.py  tracer.py
context_forge/instrumentation/instrumentors/: __init__.py  langchain.py  langgraph.py
docs/: INSTRUMENTATION_RESEARCH.md  architecture.md  index.md  quickstart.md
docs/api/: index.md
docs/api/core/: trace.md  types.md
docs/api/graders/: base.md  judges.md  memory-hygiene.md
docs/api/instrumentation/: langchain.md  tracer.md
docs/guides/: custom-graders.md
examples/: README.md
examples/basic/: 01_simple_trace.py  02_tool_calls.py  03_multi_agent.py
examples/graders/: budget_grader.py
examples/home-energy-advisor/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
examples/home-energy-advisor/.deepeval/: .deepeval_telemetry.txt
examples/home-energy-advisor/config/: agents.yaml  tools.yaml
examples/home-energy-advisor/data/profiles/: home_123.json
examples/home-energy-advisor/scripts/: simulate.py
examples/home-energy-advisor/specs/001-langgraph-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
examples/home-energy-advisor/specs/001-langgraph-agent/contracts/: memory-api.md  tools-api.md
examples/home-energy-advisor/src/: __init__.py  config.py
examples/home-energy-advisor/src/agents/: __init__.py  advisor.py  analyzer.py  memorizer.py
examples/home-energy-advisor/src/core/: __init__.py  models.py  prompts.py  state.py
examples/home-energy-advisor/src/llm/: __init__.py  ollama.py
examples/home-energy-advisor/src/memory/: __init__.py  helpers.py  store.py
examples/home-energy-advisor/src/nodes/: __init__.py  intake.py  memorize_apply.py  memorize_extract.py  memorize_summarize.py  recall.py  recommend.py
examples/home-energy-advisor/src/tools/: __init__.py  memory.py  mock.py  rates.py  solar.py  weather.py
examples/home-energy-advisor/tests/: __init__.py  conftest.py
examples/home-energy-advisor/tests/integration/: __init__.py  conftest.py  test_advisor_flow.py  test_analyzer.py  test_memorizer.py  test_persistence.py  test_response_quality.py  test_tools_live.py
examples/home-energy-advisor/tests/trajectories/: __init__.py  conftest.py  test_ev_charging.py  test_general_advice.py  test_solar_advice.py  test_stale_memory.py
examples/home-energy-advisor/tests/trajectories/scenarios/: __init__.py  ev_charging.py  general_advice.py
examples/home-energy-advisor/tests/trajectories/simple/: __init__.py  conftest.py  test_single_turn.py
examples/home-energy-advisor/tests/trajectories/simulation/: __init__.py  conftest.py  test_stale_memory.py
examples/home-energy-advisor/tests/trajectories/simulation/scenarios/: solar_advice.py  stale_memory.py
examples/home-energy-advisor/tests/unit/: __init__.py  test_advisor_agent.py  test_analyzer_agent.py  test_memorizer_agent.py  test_memory_store.py  test_tools.py
examples/scenarios/datasets/: refund_samples.jsonl
examples/scenarios/rubrics/: refund_quality.md
examples/scenarios/scenarios/: refund_eligible.yaml
examples/scenarios/tasks/: refund_request.yaml
specs/: README.md  SPEC_TEMPLATE.md
specs/001-trace-capture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-trace-capture/contracts/: instrumentor-api.md  span-converter-api.md  tracer-api.md
specs/002-deterministic-graders/: spec.md
specs/003-llm-judges/: spec.md
specs/004-eval-configuration/: spec.md
specs/005-ci-replay/: spec.md
specs/006-reports/: spec.md
specs/007-cli/: spec.md
tests/: README.md  __init__.py  conftest.py
tests/core/: test_trace_spec.py
tests/graders/: __init__.py  test_memory_hygiene.py
tests/harness/: __init__.py  test_models.py  test_persona.py  test_scenario.py
tests/integration/: __init__.py  test_langchain_instrumentor.py  test_langgraph_instrumentor.py
tests/unit/: __init__.py  test_instrumentor_base.py  test_step_types.py  test_trace_schema.py  test_tracer_api.py  test_types.py
